--- a/reservation.css
+++ b/reservation.css
@@ -653,6 +653,7 @@ td.diet-cell {
 /* optional: Abstand zwischen den Zeilen */
 .room-item {
   margin-bottom: 0.5rem;
+  font-size: 12px;
 }
 
 /* Header-Grid: zwei Spalten */
@@ -702,8 +703,8 @@ td.diet-cell {
 .room-list .room-item {
   color: #fff;
   /* weißer Text */
-  font-size: 10px;
-  /* reduziert von 1rem auf 10px */
+  font-size: 12px;
+  /* geändert von 10px auf 12px */
   line-height: 1.4;
   /* Abstand zwischen den Zeilen */
   background: transparent;
